[tool.poetry]
name = "hello-opencv-filter-python"
version = "0.1.0"
description = ""
authors = ["Yusuke Kawamoto <novogrammer@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_opencv_filter_python"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
